<resources>
    <string name="app_name">kotlin</string>
    <string name="search_menu">输入搜索关键字</string>
    <string name="search_hot">搜索热词</string>
    <string name="search_friend">常用网站</string>
    <string name="main_collect">收藏</string>
    <string name="main_tools">工具</string>
    <string name="main_todo">待办</string>
    <string name="main_ask">问答</string>
    <string name="main_about">关于</string>

    <string-array name="tab_title">
        <item>首页</item>
        <item>体系</item>
        <item>项目</item>
        <item>导航</item>
    </string-array>
</resources>

