<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_collect"
            android:icon="@drawable/collect"
            android:title="@string/main_collect" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/tools"
            android:title="@string/main_tools" />
        <item
            android:id="@+id/nav_todo"
            android:icon="@drawable/todo"
            android:title="@string/main_todo" />
        <item
            android:id="@+id/nav_ask"

            android:icon="@drawable/ask"
            android:title="@string/main_ask" />
        <item
            android:id="@+id/nav_about"

            android:icon="@drawable/about"
            android:title="@string/main_about" />
    </group>
</menu>